--- a/src/tpl/partials/modal.html
+++ b/src/tpl/partials/modal.html
@@ -38,9 +38,9 @@
                         </li>
                        </ul>
                     </div>
-                </div>
+                </div> <!-- Row -->
 
              </form>
-        </div>
-      </div>
-</div>
+        </div> <!-- Modal Content -->
+      </div> <!-- Modal Dialog -->
+</div> <!-- Modal -->
