--- a/src/assets/sass/blocks/content.scss
+++ b/src/assets/sass/blocks/content.scss
@@ -6,3 +6,10 @@
     justify-content: center;
 }
 
+.content__title {
+    margin: 0 0 2rem;
+
+    font-size: 2rem;
+    font-weight: 700;
+    color: $black;
+}
