--- a/src/assets/sass/blocks/services.scss
+++ b/src/assets/sass/blocks/services.scss
@@ -1,7 +1,40 @@
+.services {
+    margin-bottom: 2rem;
+}
+
 .services__item {
     padding: 1.2rem;
+    height: 100%;
+    position: relative;
 
     background-color: $white;
     border-radius: $radius;
     box-shadow: $shadow;
+}
+
+.services__icon {
+    width: 50px;
+    height: 50px;
+
+    position: absolute;
+    top: 1.4rem;
+    left: 1.2rem;
+    z-index: 1;
+}
+
+.services__title {
+
+    font-size: 1.4rem;
+    color: $black;
+    font-weight: 500;
+
+    padding-left: 5rem;
+}
+
+.services__text {
+    margin-top: 2rem;
+
+    font-size: 1rem;
+    color: $black;
+    font-weight: 400;
 }
